# pytcs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  noxfile.py  pyproject.toml
.github/: CODEOWNERS  release.yaml
.github/workflows/: build.yml  pytest.yml  static_analysis.yml
devtools/conda.recipe/: build_env.yml  meta.yaml
pytcs/: __init__.py  exceptions.py  helpers.py  pytcs.py
resources/: create_scope_configs.py  csv_properties.yaml  tc3_scope_3_4_3145_3.svdx
tests/: test_scope_file.py
tests/data/: tc3_scope_3_4_3145_3-ContainEOF_true.csv  tc3_scope_3_4_3145_3-DecimalMark_,.csv  tc3_scope_3_4_3145_3-ExcludeDoubleTimestamp_false-SortChannels_false.csv  tc3_scope_3_4_3145_3-ExcludeDoubleTimestamp_false-SortChannels_true.csv  tc3_scope_3_4_3145_3-ExcludeDoubleTimestamp_true-SortChannels_false.csv  tc3_scope_3_4_3145_3-Seperator_1.csv  tc3_scope_3_4_3145_3-Seperator_2.csv  tc3_scope_3_4_3145_3-Seperator_3.csv  tc3_scope_3_4_3145_3-Seperator_4.csv  tc3_scope_3_4_3145_3-default.csv  tc3_scope_3_4_3145_3_noOS.csv
